--- a/client/src/component/Contact/Contact.css
+++ b/client/src/component/Contact/Contact.css
@@ -51,12 +51,12 @@
   justify-content: center;
 }
 @media (max-width: 768px) {
-  .Contact .d_flex {
+  /*.Contact .d_flex {
     flex-direction: column;
   }
   .Contact .left,
   .Contact .right {
     width: 100%;
     margin-top: 50px;
-  }
+  }*/
 }
