--- a/client/src/component/Portfolio/Portfolio.css
+++ b/client/src/component/Portfolio/Portfolio.css
@@ -163,6 +163,9 @@ body.active-modal {
   border-bottom: 1px solid #dddddd;
 }
 
+td.final{
+  font-weight: bold;
+}
 .styled-table tbody tr:nth-of-type(even) {
   background-color: #f3f3f3;
 }
